fixed team: all is centered and auto resizes. maybe work on spacing and resize imgs

--- a/main.css
+++ b/main.css
@@ -132,7 +132,7 @@ nav{
 #team{
 	/* max-width:100vw; */
 	display:grid;
-	grid-template-columns: repeat(auto-fill, 200px) [end];
+	grid-template-columns: repeat(auto-fit, 200px) [end];
 	/* grid-auto-columns: fit-content; */
 	grid-auto-flow: row;
 	grid-gap: 10px;
